--- a/style.css
+++ b/style.css
@@ -13,42 +13,30 @@
 	margin: 0 auto;
 	max-width: 800px;
 	height: auto;
+}
 
-	.settings {
-		border-right: 1px dashed #ccc;
-		width: 350px;
+.settings {
+	border-right: 1px dashed #ccc;
+	width: 350px;
+}
 
-		h2 {
-			margin-bottom: 1rem;
-		}
+.settings h2 {
+	margin-bottom: 1rem;
+}
 
-		ul {
-			list-style: none;
-			margin: 0;
-			padding: 0;
-			margin-bottom: 1rem;
-		}
-	}
-
-	#select {
-		.custom-select {
-			width: 200px;
-			height: 50px;
-			border: none;
-			border-bottom: 1px solid black;
-			outline: none;
-
-			padding: 0.75rem 0; // отступы от текста до рамки
-
-			position: relative;
-		}
-	}
+.settings ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	margin-bottom: 1rem;
 }
 
 .select {
   position: relative;
   width: 100%;
   z-index: 1000;
+	margin: 10px;
+	height: auto;
 }
 
 .select__trigger {
